# libroskop

./: .clang-tidy  .dir-locals.el  .gitignore  CMakeLists.txt  README.md  dbdefinicion.sql  icons.qrc  libroskop.desktop  libroskop.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/: dlggestionlibros.cpp  dlggestionlibros.h  dlggestionlibros.ui  dlgseleccionargeneral.cpp  dlgseleccionargeneral.h  dlgseleccionargeneral.ui  nuevacategoria.cpp  nuevacategoria.h  nuevacategoria.ui  nuevoautor.cpp  nuevoautor.h  nuevoautor.ui  nuevolibroentrada.cpp  nuevolibroentrada.h  nuevolibroentrada.ui
objs/: proxynombres.cpp  proxynombres.h  variados.h
